{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 250,
  "lineage": "5d2aaaad-b8bd-c774-f71d-946b2fe79ab9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:842675992953:loadbalancer/app/terraform-workshop-alb/83dc583efeca68d4",
            "arn_suffix": "app/terraform-workshop-alb/83dc583efeca68d4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-workshop-alb-1196348336.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:842675992953:loadbalancer/app/terraform-workshop-alb/83dc583efeca68d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-workshop-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f9ae37351f1744b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046f4e605558f410b"
              },
              {
                "subnet_id": "subnet-0a8f165e267be8b61"
              }
            ],
            "subnets": [
              "subnet-046f4e605558f410b",
              "subnet-0a8f165e267be8b61"
            ],
            "vpc_id": "vpc-0c840f5cf2d4195f8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:842675992953:listener/app/terraform-workshop-alb/83dc583efeca68d4/345f30dda6873c25",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:842675992953:targetgroup/terraform-workshop-tgrp/c28d40e2bce8e056",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:842675992953:listener/app/terraform-workshop-alb/83dc583efeca68d4/345f30dda6873c25",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:842675992953:loadbalancer/app/terraform-workshop-alb/83dc583efeca68d4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.trgp",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "trgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:842675992953:targetgroup/terraform-workshop-tgrp/c28d40e2bce8e056",
            "arn_suffix": "targetgroup/terraform-workshop-tgrp/c28d40e2bce8e056",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:842675992953:targetgroup/terraform-workshop-tgrp/c28d40e2bce8e056",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:842675992953:loadbalancer/app/terraform-workshop-alb/83dc583efeca68d4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-workshop-tgrp",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02469354350b6c3c5",
            "arn": "arn:aws:ec2:us-east-1:842675992953:elastic-ip/eipalloc-02469354350b6c3c5",
            "association_id": "eipassoc-02b01dcdf704c9df1",
            "domain": "vpc",
            "id": "eipalloc-02469354350b6c3c5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0413f598b02fe4481",
            "private_dns": "ip-172-17-2-124.ec2.internal",
            "private_ip": "172.17.2.124",
            "public_dns": "ec2-52-44-248-135.compute-1.amazonaws.com",
            "public_ip": "52.44.248.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-workshop-eip-1"
            },
            "tags_all": {
              "Name": "terraform-workshop-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fab6bc9f696de640",
            "arn": "arn:aws:ec2:us-east-1:842675992953:elastic-ip/eipalloc-0fab6bc9f696de640",
            "association_id": "eipassoc-0d1ea560d12257d96",
            "domain": "vpc",
            "id": "eipalloc-0fab6bc9f696de640",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08b896b3505630de8",
            "private_dns": "ip-172-17-3-7.ec2.internal",
            "private_ip": "172.17.3.7",
            "public_dns": "ec2-44-207-134-157.compute-1.amazonaws.com",
            "public_ip": "44.207.134.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-workshop-eip-2"
            },
            "tags_all": {
              "Name": "terraform-workshop-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:internet-gateway/igw-0ba1d90e144d8eafb",
            "id": "igw-0ba1d90e144d8eafb",
            "owner_id": "842675992953",
            "tags": {
              "Name": "terraform-workshop-IGW"
            },
            "tags_all": {
              "Name": "terraform-workshop-IGW"
            },
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02469354350b6c3c5",
            "association_id": "eipassoc-02b01dcdf704c9df1",
            "connectivity_type": "public",
            "id": "nat-07a2f791445c06925",
            "network_interface_id": "eni-0413f598b02fe4481",
            "private_ip": "172.17.2.124",
            "public_ip": "52.44.248.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046f4e605558f410b",
            "tags": {
              "Name": "terraform-workshop-NatGateway-1"
            },
            "tags_all": {
              "Name": "terraform-workshop-NatGateway-1"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fab6bc9f696de640",
            "association_id": "eipassoc-0d1ea560d12257d96",
            "connectivity_type": "public",
            "id": "nat-062071d9dafe8c900",
            "network_interface_id": "eni-08b896b3505630de8",
            "private_ip": "172.17.3.7",
            "public_ip": "44.207.134.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a8f165e267be8b61",
            "tags": {
              "Name": "terraform-workshop-NatGateway-2"
            },
            "tags_all": {
              "Name": "terraform-workshop-NatGateway-2"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ba1d90e144d8eafb",
            "id": "r-rtb-02a385b09ef089d6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a385b09ef089d6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:route-table/rtb-025fc40d2ea7c73a0",
            "id": "rtb-025fc40d2ea7c73a0",
            "owner_id": "842675992953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a2f791445c06925",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-workshop-PrivateRouteTable-1"
            },
            "tags_all": {
              "Name": "terraform-workshop-PrivateRouteTable-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:route-table/rtb-02f3d31bdc88223c3",
            "id": "rtb-02f3d31bdc88223c3",
            "owner_id": "842675992953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062071d9dafe8c900",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-workshop-PrivateRouteTable-2"
            },
            "tags_all": {
              "Name": "terraform-workshop-PrivateRouteTable-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3c6ff94209ebf2e",
            "route_table_id": "rtb-025fc40d2ea7c73a0",
            "subnet_id": "subnet-00024edb908e68ffd"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037bcde0d7e3410e8",
            "route_table_id": "rtb-02f3d31bdc88223c3",
            "subnet_id": "subnet-04699977d31b22394"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:security-group/sg-0f9ae37351f1744b9",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9ae37351f1744b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-workshop-alb-sg",
            "name_prefix": "",
            "owner_id": "842675992953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-workshop-alb-sg"
            },
            "tags_all": {
              "Name": "terraform-workshop-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:security-group/sg-0628679b918faa770",
            "description": "Access to the RDS instances from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0628679b918faa770",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-workshop-db-sg",
            "name_prefix": "",
            "owner_id": "842675992953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-workshop-db-sg"
            },
            "tags_all": {
              "Name": "terraform-workshop-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:security-group/sg-09b2e983e82d9f61d",
            "description": "Allow inbound access to ECS tasks from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b2e983e82d9f61d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae37351f1744b9"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-workshop-task-sg",
            "name_prefix": "",
            "owner_id": "842675992953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-workshop-task-sg"
            },
            "tags_all": {
              "Name": "terraform-workshop-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:subnet/subnet-00024edb908e68ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00024edb908e68ffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842675992953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "terraform-workshop-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:subnet/subnet-04699977d31b22394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04699977d31b22394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842675992953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "terraform-workshop-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:subnet/subnet-046f4e605558f410b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046f4e605558f410b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842675992953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "terraform-workshop-PublicSubnet-1"
            },
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:subnet/subnet-0a8f165e267be8b61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8f165e267be8b61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842675992953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-workshop-PublicSubnet-2"
            },
            "tags_all": {
              "Name": "terraform-workshop-PublicSubnet-2"
            },
            "vpc_id": "vpc-0c840f5cf2d4195f8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842675992953:vpc/vpc-0c840f5cf2d4195f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-03c1a618df743159e",
            "default_route_table_id": "rtb-02a385b09ef089d6c",
            "default_security_group_id": "sg-098df107a1b1bb93b",
            "dhcp_options_id": "dopt-0dbf8aecd0792314b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c840f5cf2d4195f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a385b09ef089d6c",
            "owner_id": "842675992953",
            "tags": {
              "Name": "terraform-workshop-VPC"
            },
            "tags_all": {
              "Name": "terraform-workshop-VPC"
            }
          }
        }
      ]
    }
  ]
}